--- a/src/components/WeatherScreen/Barchart/Barchart.module.scss
+++ b/src/components/WeatherScreen/Barchart/Barchart.module.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/colors.scss';
+
 .barchart {
     display: grid;
     grid-auto-flow: column;
@@ -15,7 +17,7 @@
 }
 
 .barInner {
-    border: 1px solid #dadce0;
+    border: 1px solid $light;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -29,7 +31,7 @@
     right: 0;
     text-align: center;
     font-size: 12px;
-    color: #bababa;
+    color: $gray;
 }
 
 .barValue {
